objects/ssot__GovFinancialAssistanceSummary__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__Country__c</fullName>
        <label>Country</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DisclsReportingPeriodId__c</fullName>
        <label>Disclosure Reporting Period</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Government Financial Assistance Sum Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SubsidiaryAccountd__c</fullName>
        <label>Subsidiary Account</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__TotalAmount__c</fullName>
        <label>Total Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__Type__c</fullName>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1747383535024_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GovFinancialAssistanceSummary_Subsid_rel</label>
        <referenceTo>ssot__Account__dlm</referenceTo>
        <relationshipLabel>GovFinancialAssistanceSummary_Subsid_rel</relationshipLabel>
        <relationshipName>rel_1747383535024_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1747383540597_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GovFinancialAssistanceSummary_Discls_rel</label>
        <referenceTo>ssot__DisclosureReportingPeriod__dlm</referenceTo>
        <relationshipLabel>GovFinancialAssistanceSummary_Discls_rel</relationshipLabel>
        <relationshipName>rel_1747383540597_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>